Update URL devel repository

--- a/ns_scl_testing/etc/mock/php72_scl-7-armhfp.cfg
+++ b/ns_scl_testing/etc/mock/php72_scl-7-armhfp.cfg
@@ -63,21 +63,21 @@ cost=2000
 
 [nethserver-base]
 name=NethServer $basearch - base
-baseurl=https://nethserver.globalcortex.net/mirror/nethserver-arm/7.5.1804/base/$basearch
+baseurl=https://mrmarkuz.goip.de/mirror/nethserver-arm/7.5.1804/base/$basearch
 gpgcheck=0
 enabled=1
 enablegroups=0
 
 [nethserver-updates]
 name=NethServer $basearch - updates
-baseurl=https://nethserver.globalcortex.net/mirror/nethserver-arm/7.5.1804/updates/$basearch
+baseurl=https://mrmarkuz.goip.de/mirror/nethserver-arm/7.5.1804/updates/$basearch
 gpgcheck=0
 enabled=1
 enablegroups=1
 
 [nethserver-testing]
 name=NethServer $basearch - testing
-baseurl=https://nethserver.globalcortex.net/mirror/nethserver-arm/7.5.1804/testing/$basearch
+baseurl=https://mrmarkuz.goip.de/mirror/nethserver-arm/7.5.1804/testing/$basearch
 gpgcheck=0
 enabled=0
 enablegroups=0
@@ -85,7 +85,7 @@ enablegroups=0
 #Temporary placeholder for missing epel repositories
 [epel]
 name=NethServer $basearch - epel placeholder
-baseurl=https://nethserver.globalcortex.net/mirror/nethserver-arm/7.5.1804/ns-epel/$basearch
+baseurl=https://mrmarkuz.goip.de/mirror/nethserver-arm/7.5.1804/ns-epel/$basearch
 gpgcheck=0
 enabled=1
 enablegroups=0
@@ -100,7 +100,7 @@ enabled=0
 
 [ns-scl-testing]
 name=NethServer $basearch - SCL- testing
-baseurl=https://nethserver.globalcortex.net/mirror/nethserver-arm/7.5.1804/ns-scl-testing/$basearch
+baseurl=https://mrmarkuz.goip.de/mirror/nethserver-arm/7.5.1804/ns-scl-testing/$basearch
 gpgcheck=0
 enabled=1
 enablegroups=0
